--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
 </head>
 <body>
     <div class="nav">
-         <button class="prev" onclick="Slide(-1)">Previous</button>
-        <button class="next" onclick="Slide(1)">Next</button>
         <img class="slide" src="king1.jpeg">
         <img  class="slide" src="king2.jpg">
         <img class="slide" src="KINGMANAWAT.jpg">
+        <button class="prev" onclick="Slide(-1)">Previous</button>
+        <button class="next" onclick="Slide(1)">Next</button>
     </div>
+    <div style="text-align:center">
+        <span class="dot"></span> 
+        <span class="dot"></span> 
+        <span class="dot"></span> 
+      </div>
     <script src="script.js"></script>
 </body>
 </html>
