--- a/index.html
+++ b/index.html
@@ -5,13 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
-    <div class="nav">
-        <img class="slide" src="king1.jpeg">
-        <img  class="slide" src="king2.jpg">
-        <img class="slide" src="KINGMANAWAT.jpg">
-    </div>
-    <script src="script.js"></script>
+    <section>
+            <div class="topnav">
+                <a href="#home">Home</a>
+                <a href="#contact">Contact</a>
+                <a href="#about">About</a>
+              </div>
+              <div class="Sintro">
+                    <h3>
+                        Hello Everyone,My Name Is
+                    </h3>
+                    <h1>
+                        Mahendra Singh Rao.
+                    </h1>
+              </div>
+    </section>
 </body>
 </html>
