--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
                 <a href="#about">About</a>
               </div>
               <div class="Sintro">
-                    <h3>
-                        Hello Everyone,My Name Is
+                    <span class="subheading">
+                        Hi There !
+                        </span>
                     </h3>
                     <h1>
-                        Mahendra Singh Rao.
+                        I Am Mahendra Singh Rao.
                     </h1>
               </div>
     </section>
