--- a/index.html
+++ b/index.html
@@ -6,23 +6,21 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <section>
-            <div class="topnav">
-                <a href="#home">Home</a>
-                <a href="#contact">Contact</a>
-                <a href="#about">About</a>
-              </div>
               <div class="Sintro">
                     <span class="subheading">
                         Hi There !
                         </span>
-                    </h3>
+                    <br>
                     <h1>
                         I Am Mahendra Singh Rao.
                     </h1>
+                    <h2><span id="words"> Rider</span></h2>
               </div>
     </section>
+    
 </body>
 </html>
