--- a/index.html
+++ b/index.html
@@ -3,24 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>My Portfolio</title>
+    <script defer src="script.js"></script>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+   
 </head>
 <body>
-    <section>
-              <div class="Sintro">
-                    <span class="subheading">
-                        Hi There !
-                        </span>
-                    <br>
-                    <h1>
-                        I Am Mahendra Singh Rao.
-                    </h1>
-                    <h2><span id="words"> Rider</span></h2>
-              </div>
-    </section>
+    <section class="mainimg">
+        <!-- <img class="mainimg" src="king.jpg" alt=""> -->
     
+   <nav class="navbar">
+        <p class="logo">KINGMANAWAT</p>
+        <ul class="links">
+            <li class="link-items">
+                <a href="" class="link">Home</a>
+            </li>
+            <li class="link-items">
+                <a href="" class="link">About</a>
+            </li>
+            <li class="link-items">
+                <a href="" class="link">Contact</a>
+            </li>
+        </ul>
+   </nav>
+   <p>
+    <h1>
+        Hi There !
+    </h1>
+    <h2>
+        I am Mahendra Singh Rao 
+    </h2>
+   </p>
+</section>
+
+   <div class="About">
+    <div class="aboutimg">
+        <img src="KINGMANAWAT.jpg" alt="">
+    </div>
+    <div class="aboutme">
+        <h1>About Me</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam autem voluptates veritatis nemo pariatur ducimus eaque commodi quaerat, mollitia deleniti tempore facere distinctio corrupti ullam maiores consectetur esse natus maxime.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem possimus delectus autem? Officiis odit vitae consequatur facilis veniam dolore tenetur at, velit et quaerat quibusdam dignissimos, sequi voluptatibus voluptates cumque?</p>
+    </div>
+   </div>
 </body>
 </html>
