--- a/index.html
+++ b/index.html
@@ -26,14 +26,16 @@
             </li>
         </ul>
    </nav>
-   <p>
-    <h1>
+   <div class="intro">
+    <h1 class="hh">
         Hi There !
     </h1>
     <h2>
-        I am Mahendra Singh Rao 
-    </h2>
-   </p>
+        I am Mahendra Singh Rao <br>
+        I am <span class="typewriter"></span>
+      </h2>      
+        
+    </div>
 </section>
 
    <div class="About">
@@ -47,4 +49,35 @@
     </div>
    </div>
 </body>
+<script>
+    const typewriterText = document.querySelector(".typewriter");
+const phrases = ["Farmer....","Youtuber....","Rider....","PhotoGrapher....","Happy Person....."];
+
+let phraseIndex = 0;
+let characterIndex = 0;
+
+function type() {
+  if (characterIndex < phrases[phraseIndex].length) {
+    typewriterText.textContent += phrases[phraseIndex][characterIndex];
+    characterIndex++;
+    setTimeout(type, 100);
+  } else {
+    setTimeout(erase, 1000);
+  }
+}
+
+function erase() {
+  if (characterIndex > 0) {
+    typewriterText.textContent = phrases[phraseIndex].substring(0, characterIndex - 1);
+    characterIndex--;
+    setTimeout(erase, 50);
+  } else {
+    phraseIndex = (phraseIndex + 1) % phrases.length;
+    setTimeout(type, 250);
+  }
+}
+
+type();
+
+</script>
 </html>
