--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
    
 </head>
 <body>
-    <section class="mainimg">
+    <section >
+
+    <div class="mainimg">
         <!-- <img class="mainimg" src="king.jpg" alt=""> -->
-    
+    </div>
    <nav class="navbar">
         <p class="logo">KINGMANAWAT</p>
         <ul class="links">
