--- a/index.html
+++ b/index.html
@@ -5,12 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
     <div class="main">
         <div class="hero">
-                
         </div>
+        <nav class="navbar">
+            <div class="logo"> <a href="#">KINGMANAWAT</a> </div>
+            <ul class="links">
+                <li class="link-items">
+                    <a href="" class="link">Home</a>
+                </li>
+                <li class="link-items">
+                    <a href="" class="link">About</a>
+                </li>
+                <li class="link-items">
+                    <a href="" class="link">Contact</a>
+                </li>
+            </ul>
+            <div class="btn_toggle">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+       </nav>
     </div>
 </body>
+<script src="index.js"></script>
 </html>
