--- a/index.html
+++ b/index.html
@@ -8,27 +8,25 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
-    <div class="main">
-        <div class="hero">
-        </div>
-        <nav class="navbar">
-            <div class="logo"> <a href="#">KINGMANAWAT</a> </div>
+    <header>
+        <div class="hero"></div>
+        <div class="navbar">
+            <div class="logo"><a href="#">KINGMANAWAT</a></div>
             <ul class="links">
-                <li class="link-items">
-                    <a href="" class="link">Home</a>
-                </li>
-                <li class="link-items">
-                    <a href="" class="link">About</a>
-                </li>
-                <li class="link-items">
-                    <a href="" class="link">Contact</a>
-                </li>
+                <li><a href="Home">Home</a></li>
+                <li><a href="About">About</a></li>
+                <li><a href="Contact">Contact</a></li>
             </ul>
-            <div class="btn_toggle">
+            <div class="toggle_btn">
                 <i class="fa-solid fa-bars"></i>
             </div>
-       </nav>
-    </div>
+        </div>
+        <div class="dropdown_menu open">
+            <li><a href="Home">Home</a></li>
+                <li><a href="About">About</a></li>
+                <li><a href="Contact">Contact</a></li>
+        </div>
+    </header>
 </body>
 <script src="index.js"></script>
 </html>
