--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
         </div>
-        <div class="dropdown_menu open">
+        <div class="dropdown_menu">
             <li><a href="Home">Home</a></li>
                 <li><a href="About">About</a></li>
                 <li><a href="Contact">Contact</a></li>
