--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
                 <li><a href="Contact">Contact</a></li>
         </div>
     </header>
+    <div class="main">
+        <section id="hero">
+            <h1>Hi There</h1>
+            <h2>
+                I am Mahendra Singh Rao <br>
+                I am <span class="typewriter"></span>
+              </h2> 
+        </section>
+    </div>
 </body>
 <script src="index.js"></script>
 </html>
